finish up final project
